syntax = "proto3";

package PB_MfUltralight;
option java_package = "com.flipperdevices.nfc.protobuf";

message ReadPageRequest {
    uint32 page = 1;
}

message ReadPageResponse {
    uint32 page = 1;
    bytes data = 2;
}
